2021-07-22  Yusuke Suzuki  <ysuzuki@apple.com>

        Micro-optimize innerHTML
        https://bugs.webkit.org/show_bug.cgi?id=228142

        Reviewed by Simon Fraser.

        * wtf/Vector.h:
        (WTF::Malloc>::shrinkToBestFit): This shrinks the backing storage to "appropriate for the living Vector".
        * wtf/text/AtomStringImpl.cpp:
        (WTF::UCharBufferTranslator::equal): WTF::equal for String does not check hash. This is because computing hash is expensive
        and we would like to avoid that if it is not necessary. But when inserting string into AtomStringTable, we can use hash value
        since they must be already computed because of HashMap's requirement. So let's use it before calling WTF::equal.
        (WTF::LCharBufferTranslator::equal):
        (WTF::BufferFromStaticDataTranslator::equal):
        * wtf/text/StringView.h:
        (WTF::StringView::stripLeadingMatchedCharacters): Add this and use it in HTMLTreeBuilder.

2021-07-22  Alex Christensen  <achristensen@webkit.org>

        XHR.send(Document) should replace mismatched surrogates with replacement character before sending
        https://bugs.webkit.org/show_bug.cgi?id=228170

        Reviewed by Chris Dumez.

        * wtf/text/WTFString.cpp:
        (WTF::replaceUnpairedSurrogatesWithReplacementCharacter):
        * wtf/text/WTFString.h:
        Move from WebCore, rename as suggested, update spec link to one that works.

2021-07-22  Zan Dobersek  <zdobersek@igalia.com>

        Add CPU(RISCV64)
        https://bugs.webkit.org/show_bug.cgi?id=228178

        Reviewed by Adrian Perez de Castro.

        Detect when compiling for the RISC-V 64-bit architecture and define
        the WTF_CPU_RISCV64 macro under that condition, enabling use of
        CPU(RISCV64) build guards.

        * wtf/PageBlock.h: Use 4 kB as the page size ceiling for CPU(RISCV64).
        * wtf/PlatformCPU.h:

2021-07-21  Miguel Gomez  <magomez@igalia.com>
